--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@storybook/preset-create-react-app": "^4.1.0",
     "@storybook/react": "^6.4.22",
     "@storybook/testing-library": "^0.0.11",
+    "chromatic": "^6.5.4",
     "webpack": "^5.72.0"
   }
 }
